prepared client service config to dedicate a different registry address

--- a/templates/client-service.cfg.jinja2
+++ b/templates/client-service.cfg.jinja2
@@ -1,4 +1,8 @@
 # managed by ansible
+{% if registry_frontend is defined %}
+registry={{ registry_frontend }}
+{% else %}
 registry={{ registry }}
+{% endif %}
 mount_point=/quobyte
 
