--- a/templates/varsfile-template.jinja2
+++ b/templates/varsfile-template.jinja2
@@ -1,33 +1,31 @@
 ## Global configuration: valid for clients and servers
 # Registry entries:
-registry: quobyte-demo.com.
-registry_frontend: frontend.quobyte-demo.com.
+registry: {{ registry_backend_service_records }} 
+registry_frontend: {{ registry_frontend_service_records }}
 
 ## Ansible configuration:
 # Quobyte API endpoint to talk to
-api_service: 192.168.1.2
+api_service: {{ hostvars[groups['apiservices'][0]].inventory_hostname }} 
 
 ## Storage server configuration
 
 ### Networking
 # Service network(s): Quobyte services will communicate through this network.
 service_networks: 
-  - 192.168.1.0/24 
+  - {{ backend_network }} 
 # Client network(s): Quobyte clients will use this network to communicate with Quobyte services.
 client_networks: 
-  - 172.16.0.0/16
+  - {{ frontend_network }} 
 # Trusted service network(s): Any service running within this segment will be trusted.
 # All others need to authenticate. See https://support.quobyte.com/docs/16/latest/service_authentication.html
 trusted_service_networks: 
-##  - 10.0.0.0/8
-##  - 172.16.0.0/16
-  - 192.168.1.0/24 
+  - {{ backend_network }} 
 
 ### Storage Device Layout
 # Select one or more dedicated metadata device(s).
 # All other available devices will be used as data devices.
 metadatadevices: 
-  - /dev/disk/by-path/pci-0000:00:01.0-nvme-1 
+  - {{ metadata_device }} 
 
 ## Service configuration
 # A valid DNS entry for the S3 endpoint
@@ -38,20 +36,17 @@ s3_endpoint: s3.quobyte-demo.com.
 mountpoint: /quobyte
 
 # Name of your Quobyte cluster
-clustername: quobyte
+clustername: {{ clustername }}
 
 # Quobyte admin user
-admin_user: storageadmin
+admin_user: {{ username }}
 # Quobyte admin user password. Consider ansible vault etc.
-admin_password: changeMe
+admin_password: {{ password }}
 
 # Path to license file
-license_key: "H4sIAAAAAAAAAONgEGIxNDY1kWI2MTZREg0oSi1OzEktVghJLS5RcM7PLUjMq9S4v33/ETYjBouGhi1nrtw/xuxkbmDKJMnQv21f1TW3C28lQs9O3L/hXpGqr29MXcYeNiYJLs+J80w+1dt/zBaNVrns4sfo6efBn1wS7MEQwdDA2NAwa9mr9Y8ZO+CsCYwMMxgZFjAynAAKvWzeeE/sAiMDABJuXtabAAAA"
+license_key: "{{ license }}"
 
 ## Optional config settings
-
-# If you set a repo id you probably want to install Quobyte 2.x
-## repo_id: 2dxxxxc327Cfyyyasfd
 
 ## Dedicated mirror: If you do not use Quobyte repositories, but your own
 # dedicated_mirror: https://mypackages.example.com/repo/quobyte/releasebranch
